# emerge-aasds

./: .gitignore  README.md  Testmatrix.npz  pyproject.toml  setup.py
src/emerge_aasds/: __init__.py  _build_wrapper.py  _interface.py  _wrapper.c  _wrapper.h  interface.py  libaccelerate_wrapper.dylib  utilities.py
tests/: test.py
tests.py/: test.py
