[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emerge-aasds"
version = "0.1.0"
description = "Apple Accelerate Sparse Direct Solver - Fast sparse linear solver for macOS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["sparse", "linear-solver", "accelerate", "macos", "apple-silicon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/FennisRobert/emerge-aasds"
Repository = "https://github.com/FennisRobert/emerge-aasds"
Issues = "https://github.com/FennisRobert/emerge-aasds/issues"

[tool.setuptools]
packages = ["emerge_aasds"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.dylib"]